Add check for non-NULL function pointer where it was missing.

Maybe this was the cause for gnucash bug
http://bugzilla.gnome.org/show_bug.cgi?id=582048 ? But in any
case the pointer should be checked.

git-svn-id: https://devel.aqbanking.de/svn/gwenhywfar/trunk@1558 70169cfe-8b10-0410-8925-dcb4b91034d8